Micro tab: Removed checkbox to toggle whether the color shown is based on charge or atom identity
Micro tab: Removed tick mark readouts from the beaker
Micro tab: Removed "Show values" checkbox from the bar chart
# 0.00.103 (56315) Sep 8, 2011
Micro tab: Made kit selection buttons look more button-like, resolves #3064
# 0.00.102 (56290) Sep 7, 2011
Macro tab: Fixed: Dragging conductivity tester node moves it in front of the shakers and vice-versa
Macro tab: Fixed: The conductivity tester can go behind the evaporation control box
# 0.00.101 (56282) Sep 7, 2011
Macro tab: Show the solute control panel node behind the shaker node so the conductivity tester will also go in front
Macro tab: Fixed: Conductivity meter appears behind its control box
# 0.00.100 (56211) Sep 6, 2011
Water tab: remove less water molecules when adding sucrose
Water tab: Added developer control to control water removal when adding sucrose
# 0.00.99 (56204) Sep 6, 2011
Water tab: Keep the water density more constant when adding sucrose
Changed the time scale to 0.06 instead of 0.04
# 0.00.98 (56197) Sep 6, 2011
Prevent the shakers from being dragged offscreen
Improved error handling and docs
Moved sugar-and-salt-solutions faucet to piccolo-phet
Internal changes to separate code from first two tabs
Water tab: Fixed: Sucrose repels each other because C12H22O11 has net charge of +11
Updated internationalization
# 0.00.97 (55827) Aug 26, 2011
Micro tab: Added a workaround for completely dissolving any crystals that have become disconnected as a result of partial dissolving
Micro tab: Fixed: Calcium Chloride says "remove solutes" instead of "remove solute"
Micro tab: Move all particles toward the drain with a random walk, with nearer particles moving faster
Micro tab: Incremental progress toward draining according to formula ratios
Micro tab: During crystal growth, ensure crystals grow by complete formula units instead of by particle